LU-7239 mdd: make mdd_attr_set() synchronous less often

In permission_needs_sync(), test mode changes for S_ISUID or S_ISVTX
rather than simply checking whether the new mode in the incoming
request has those bits set.

Change the default value of mdd->mdd_sync_permission to 0, so that
mdd_attr_set() is only made synchronous if the admin turns on the
flag.  Enabling this causes lustre to exceed POSIX requirements.

Prior to these changes, copying a directory tree into lustre, whose
directories' modes have S_ISUID | S_ISGID | S_ISVTX set, is
unnecessarily slow because chmod() system calls are synchronous
whether they change the actual permissions or not.

Signed-off-by: Olaf Faaland <faaland1@llnl.gov>
Change-Id: I41d3297a007eb4b796790b3b3de0ad355d17cb58